# ExamForge

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  README.md  compose.production.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  tsconfig.base.json
.github/: actionlint.yaml
.github/workflows/: ci.yml  release-images.yml
apps/: AGENTS.md
apps/api/: Dockerfile  package.json  tsconfig.json
apps/scheduler/: AGENTS.md  Dockerfile  README.md  openapi.json  pyproject.toml
apps/scheduler/examforge_scheduler/: __init__.py  benchmark.py  cli.py  conflicts.py  diagnostics.py  generator.py  http_api.py  http_benchmark.py  http_models.py  models.py  openapi.py  precheck.py  report.py  scoring.py  solver.py  teacher_assignment.py  time_slots.py  transport.py
apps/scheduler/tests/: test_benchmark.py  test_cli.py  test_conflicts.py  test_diagnostics.py  test_generator.py  test_http_api.py  test_http_benchmark.py  test_models.py  test_openapi.py  test_precheck.py  test_report.py  test_rescheduling.py  test_scoring.py  test_solver_fixed_assignments.py  test_solver_hard_constraints.py  test_solver_soft_objective.py  test_teacher_assignment.py  test_transport.py  test_transport_equivalence.py
apps/web/: Dockerfile  package.json  tsconfig.json
apps/worker/: Dockerfile  package.json
deploy/logrotate/: examforge-nginx
deploy/nginx/: examforge.conf.template
deploy/systemd/: examforge-backup.service  (+3 more)
docs/: AGENTS.md  index.md
scripts/: demo-down.sh  demo-reset.sh  demo-smoke.mjs  demo-up.sh  test-demo-e2e.sh
(+218 files in other folders)
