[project]
name = "examforge-scheduler"
version = "0.1.0"
description = "ExamForge scheduling prototype"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116,<1",
    "ortools>=9.10",
    "uvicorn>=0.35,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
